in css file change width one button

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 </div>
               </li>
             </ul>
-
+            
             <secton>
 
 
@@ -407,15 +407,14 @@
                       </a>
                     </div>
                   </div>
+                 </div>
         </section>
         <div class="news-under-link">
           <a href="#" class="news-item-link">
             Показать ещё
           </a>
         </div>
-
-
-    </div>
+      
     </section>
   </main>
 
@@ -458,10 +457,10 @@
         </p>
 
         <ul class="footer-under-links">
-          <a href="#"><li class="footer-under-icon"><img src="./images/facebook-icon.svg" width="25" height="25" alt="facebook.com icon"></li></a>
-          <a href="#"><li class="footer-under-icon"><img src="./images/insta-icon.svg" width="25" height="25" alt="instagram.com icon"></li></a>
-          <a href="#"><li class="footer-under-icon"><img src="./images/telegram-icon.svg" width="25" height="25" alt="telegram.com icon"></li></a>
-          <a href="#"><li class="footer-under-icon"><img src="./images/youtube-icon.svg" width="25" height="25" alt="youtube.com icon"></li></a>
+          <a href="#" target="blank"><li class="footer-under-icon"><img src="./images/facebook-icon.svg" width="25" height="25" alt="facebook.com icon"></li></a>
+          <a href="#" target="blank"><li class="footer-under-icon"><img src="./images/insta-icon.svg" width="25" height="25" alt="instagram.com icon"></li></a>
+          <a href="#" target="blank"><li class="footer-under-icon"><img src="./images/telegram-icon.svg" width="25" height="25" alt="telegram.com icon"></li></a>
+          <a href="#" target="blank"><li class="footer-under-icon"><img src="./images/youtube-icon.svg" width="25" height="25" alt="youtube.com icon"></li></a>
         </ul>
       </div>
       </div>
